--- a/study/Chap7_연속형_확률변수.ipynb
+++ b/study/Chap7_연속형_확률변수.ipynb
@@ -30,7 +30,7 @@
       "toc_window_display": false
     },
     "colab": {
-      "name": "chap07.ipynb의 사본",
+      "name": "Chap7_연속형_확률변수.ipynb",
       "provenance": [],
       "collapsed_sections": [
         "51L1Ug3H4Uc9",
@@ -47,6 +47,58 @@
       },
       "source": [
         "# 연속형 확률변수"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "i6qOzPJOHzlG",
+        "outputId": "24693730-4d09-4fe8-a8de-87c42eac14f9"
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/drive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uJ89hTVbG7NN",
+        "outputId": "35a7d0d4-d20f-4444-bfb8-97e571e22c0b"
+      },
+      "source": [
+        "!git clone https://github.com/KDT-study/Statistics.git"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Cloning into 'Statistics'...\n",
+            "remote: Enumerating objects: 24, done.\u001b[K\n",
+            "remote: Counting objects: 100% (24/24), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (17/17), done.\u001b[K\n",
+            "remote: Total 24 (delta 7), reused 24 (delta 7), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (24/24), done.\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -70,7 +122,7 @@
         "%matplotlib inline \n",
         "# notebook을 실행한 브라우저에서 바로 그림을 볼 수 있게 해주는 코드"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,7 +150,7 @@
         "warnings.filterwarnings('ignore',\n",
         "                        category=integrate.IntegrationWarning)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -258,7 +310,7 @@
       "source": [
         "x_range = np.array([0, 1])"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -277,7 +329,7 @@
         "    else:\n",
         "        return 0"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -292,7 +344,7 @@
       "source": [
         "X = [x_range, f]"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -897,7 +949,7 @@
         "        return g(x) * f(x)\n",
         "    return integrate.quad(integrand, -np.inf, np.inf)[0] # quad 함수로 적분값 반환"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -916,7 +968,7 @@
       "source": [
         "E(X)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1072,7 +1124,7 @@
         "\n",
         "integrate.quad(integrand, -np.inf, np.inf)[0]"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1127,7 +1179,7 @@
         "        return (g(x) - mean) ** 2 * f(x)\n",
         "    return integrate.quad(integrand, -np.inf, np.inf)[0]"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1146,7 +1198,7 @@
       "source": [
         "V(X)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
